--- a/index.html
+++ b/index.html
@@ -1,22 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google Fonts is Here -->
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Follower Web</title>
 </head>
+
 <body>
+    <!-- Header Area -->
     <header>
-
+        <div class="banner-sec container">
+            <div class="banner-text">
+                <h1>Let's make beautiful flowers a part of your life.</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+                <button class="btn">Shop Now</button>
+            </div>
+            <div class="banner-img">
+                <img src="./image/pngwing 10.png" alt="banner flower">
+            </div>
+        </div>
     </header>
-
+    <!-- Main Area -->
     <main>
-
+        
     </main>
-
+    <!-- Footer Area -->
     <footer>
 
     </footer>
 </body>
+
 </html>
